# hourly-register

./: .gitignore  LICENSE  README.md  conftest.py  example.yaml  gdrive_config.yaml  pyproject.toml  report.py  requirements.txt
.github/workflows/: python-app.yml
gdrive/: __init__.py  config.py  drive.py  push.py
latex/: report.tex  template.tex
parser/: __init__.py  calendar.py  config.py  render.py
src/: calendar.py  config_loader.py  render.py
tests/: actual_rendered_template.tex  example.yaml  expected_rendered_template.tex  test_calendar.py  test_config.py  test_config_loader.py  test_google_drive.py  test_render.py
